<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_agent"
        android:icon="@drawable/ic_nav_agent"
        android:title="@string/nav_agent" />

    <item
        android:id="@+id/nav_stock"
        android:icon="@drawable/ic_nav_stock"
        android:title="@string/nav_stock" />

    <item
        android:id="@+id/nav_strategy"
        android:icon="@drawable/ic_nav_strategy"
        android:title="@string/nav_strategy" />

    <item
        android:id="@+id/nav_mine"
        android:icon="@drawable/ic_nav_mine"
        android:title="@string/nav_mine" />

</menu>
